--- a/custom-addons/em_pos_multi_uom/views/views.xml
+++ b/custom-addons/em_pos_multi_uom/views/views.xml
@@ -57,12 +57,13 @@
         </record>
 
         <!-- Inherit and extend the form view for account.move.line -->
-        <record id="view_account_move_line_form_inherit" model="ir.ui.view">
+         <record id="view_account_move_line_form_inherit" model="ir.ui.view">
             <field name="name">account.move.line.form.inherit</field>
             <field name="model">account.move.line</field>
             <field name="inherit_id" ref="account.view_move_line_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//sheet/group" position="inside">
+                    <field name="product_uom_category_id"/>
                     <field name="product_uom_id"/>
                 </xpath>
             </field>
