--- a/custom-addons/em_pos_multi_uom/views/views.xml
+++ b/custom-addons/em_pos_multi_uom/views/views.xml
@@ -69,6 +69,17 @@
         </field>
     </record>
 
+        <record id="view_invoice_line_form_inherit" model="ir.ui.view">
+    <field name="name">account.invoice.line.form.inherit.multi.uom</field>
+    <field name="model">account.invoice.line</field>
+    <field name="inherit_id" ref="account.invoice_line_form"/>
+    <field name="arch" type="xml">
+        <xpath expr="//field[@name='product_id']" position="after">
+            <field name='product_uom_id'/>
+        </xpath>
+    </field>
+</record>
+
 
 
                 <!-- test -->
