--- a/custom-addons/em_pos_multi_uom/views/views.xml
+++ b/custom-addons/em_pos_multi_uom/views/views.xml
@@ -56,26 +56,23 @@
             </field>
         </record>
 
-        <record id="view_move_form_inheritt" model="ir.ui.view">
-            <field name="name">account.move.form.inherit.product.uom</field>
-        <field name="model">account.move</field>
-        <field name="inherit_id" ref="account.view_move_form"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='invoice_line_ids']/tree//field[@name='discount']" position="before">
-                <field name="product_uom_idd" />
-            </xpath>
-
-
-        </field>
-    </record>
-
-        <record id="view_invoice_line_form_inherit" model="ir.ui.view">
-    <field name="name">account.invoice.line.form.inherit.multi.uom</field>
-    <field name="model">account.invoice.line</field>
-    <field name="inherit_id" ref="account.invoice_line_form"/>
+        <record id="view_move_form_inherit" model="ir.ui.view">
+    <field name="model">account.move</field>
+    <field name="inherit_id" ref="account.view_move_form"/>
     <field name="arch" type="xml">
-        <xpath expr="//field[@name='product_id']" position="after">
-            <field name='product_uom_id'/>
+        <xpath expr="//field[@name='invoice_line_ids']/tree//field[@name='discount']" position="before">
+            <field name="product_uom_idd" />
+        </xpath>
+    </field>
+</record>
+
+
+        <record id="view_invoice_form_inherit" model="ir.ui.view">
+    <field name="model">account.invoice</field>
+    <field name="inherit_id" ref="account.invoice_form"/>
+    <field name="arch" type="xml">
+        <xpath expr="//field[@name='invoice_line_ids']/tree//field[@name='price_unit']" position="after">
+            <field name="product_uom_idd" />
         </xpath>
     </field>
 </record>
