--- a/custom-addons/em_pos_multi_uom/views/views.xml
+++ b/custom-addons/em_pos_multi_uom/views/views.xml
@@ -67,16 +67,15 @@
 </record>
 
 
-        <record id="view_invoice_form_inherit" model="ir.ui.view">
-    <field name="model">account.invoice</field>
-    <field name="inherit_id" ref="account.invoice_form"/>
+      <record id="view_move_form_inherit" model="ir.ui.view">
+    <field name="model">account.move</field>
+    <field name="inherit_id" ref="account.view_move_form"/>
     <field name="arch" type="xml">
-        <xpath expr="//field[@name='invoice_line_ids']/tree//field[@name='price_unit']" position="after">
+        <xpath expr="//field[@name='invoice_line_ids']/tree//field[@name='discount']" position="before">
             <field name="product_uom_idd" />
         </xpath>
     </field>
 </record>
-
 
 
                 <!-- test -->
