--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -12,7 +12,7 @@
         </field>
     </record>
 
-      <!-- Merged View
+       Merged View
     <record id="product_template_form_view_merged" model="ir.ui.view">
         <field name="name">product.template.form.merged</field>
         <field name="model">product.template</field>
@@ -49,6 +49,6 @@
                   name="الوحدات المتعددة "
                   action="action_product_product_tree"
                   parent="sale.product_menu_catalog"
-                  sequence="10"/>-->
+                  sequence="10"/>
 
 </odoo>
