--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -11,12 +11,17 @@
           
         </field>
     </record>
-
-    <record id="product_template_form_view_merged" model="ir.ui.view">
-        <field name="name">product.template.form.merged</field>
+    
+ <record id="combined_product_template_tree_view" model="ir.ui.view">
+        <field name="name">product.template.tree.inherit</field>
         <field name="model">product.template</field>
-        <field name="inherit_id" ref="product.product_template_form_view"/>
+        <field name="inherit_id" ref="product.product_template_tree_view"/> <!-- Adjust this reference if necessary -->
         <field name="arch" type="xml">
+            <!-- Merge content from both views -->
+            <xpath expr="//field[@name='multi_uom_price_id']/tree" position="inside">
+                <field name="barcode"/>
+                <field name="product_variant_id" column_invisible="1"/>
+            </xpath>
             <xpath expr="//page[@name='sales']/group[@name='sale']" position="inside">
                 <group>
                     <field name="category_id" invisible="1" column_invisible="1"/>
@@ -24,8 +29,6 @@
                 <group name="uom_price" string="UOM Price">
                     <field name="multi_uom_price_id" nolabel="1" colspan="2">
                         <tree editable="bottom">
-                            <field name="barcode"/>
-                            <field name="product_variant_id" column_invisible="1"/>
                             <field name="category_id" invisible="1" column_invisible="1"/>
                             <field name="uom_id"/>
                             <field name="price"/>
@@ -36,18 +39,17 @@
         </field>
     </record>
 
+    <!-- New Menu Item -->
+    <menuitem id="menu_combined_tree_view" name="Combined Tree View" parent="sale.product_menu_catalog"/> <!-- Adjust parent menu ID -->
 
-        <record id="action_product_product_tree" model="ir.actions.act_window">
-            <field name="name">product_multi_uom_price</field>
-            <field name="res_model">product.multi.uom.price</field>
-            <field name="view_mode">tree,form</field>
-            <field name="view_id" ref="product_template_form_view_merged"/>
-        </record>
+    <!-- New Action -->
+    <record id="action_combined_tree_view" model="ir.actions.act_window">
+        <field name="name">Combined Tree View</field>
+        <field name="res_model">product.template</field>
+        <field name="view_mode">tree,form</field>
+        <field name="view_id" ref="combined_product_template_tree_view"/>
+    </record>
 
-        <menuitem id="menu_product_product_tree"
-                  name="الوحدات المتعددة "
-                  action="action_product_product_tree"
-                  parent="sale.product_menu_catalog"
-                  sequence="10"/>
-
+    <!-- Link Action to Menu Item -->
+    <menuitem id="menu_combined_tree_view" action="action_combined_tree_view"/>
 </odoo>
