--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -11,14 +11,22 @@
           
         </field>
     </record>
-    
- <record id="combined_product_template_tree_view" model="ir.ui.view">
+
+
+   <record id="combined_product_template_tree_view" model="ir.ui.view">
         <field name="name">product.template.tree.inherit</field>
         <field name="model">product.template</field>
-        <field name="inherit_id" ref="product.product_template_tree_view"/> <!-- Adjust this reference if necessary -->
+        <field name="inherit_id" ref="product.product_template_form_view"/> <!-- Adjust this reference if necessary -->
         <field name="arch" type="xml">
-            <!-- Merge content from both views -->
+            <!-- Example XPath expressions; adjust according to actual parent view structure -->
+            <xpath expr="//field[@name='multi_uom_price_id']" position="attributes">
+                <attribute name="nolabel">1</attribute>
+                <attribute name="colspan">2</attribute>
+            </xpath>
             <xpath expr="//field[@name='multi_uom_price_id']/tree" position="inside">
+                <field name="category_id" invisible="1" column_invisible="1"/>
+                <field name="uom_id"/>
+                <field name="price"/>
                 <field name="barcode"/>
                 <field name="product_variant_id" column_invisible="1"/>
             </xpath>
