--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -14,18 +14,15 @@
 
 
  <record id="combined_product_template_tree_view" model="ir.ui.view">
-        <field name="name">product.template.tree.inherit</field>
+        <field name="name">product.template.form.inherit</field>
         <field name="model">product.template</field>
-        <field name="inherit_id" ref="product.product_template_tree_view"/> <!-- Adjust this reference if necessary -->
+        <field name="inherit_id" ref="product.product_template_form_view"/>
         <field name="arch" type="xml">
-            <!-- Merge content from both views -->
-            <xpath expr="//field[@name='multi_uom_price_id']/tree" position="inside">
-                <field name="barcode"/>
-                <field name="product_variant_id" column_invisible="1"/>
-                 <field name="uom_id"/>
-                <field name="price"/>
+             <xpath expr="//field[@name='multi_uom_price_id']/tree" position="inside">
+                 <field name="barcode"/>
+                  <field name="product_variant_id" column_invisible="1"/>
             </xpath>
-            
+
         </field>
     </record>
 
