--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -14,8 +14,8 @@
 
 
  <record id="combined_product_template_tree_view" model="ir.ui.view">
-        <field name="name">product.template.form.inherit</field>
-        <field name="model">product.template</field>
+        <field name="name">product.template.form.inheritt</field>
+        <field name="model">product.multi.uom.price</field>
         <field name="inherit_id" ref="product.product_template_form_view"/>
         <field name="arch" type="xml">
              <xpath expr="//field[@name='multi_uom_price_id']/tree" position="inside">
