--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -738,7 +738,7 @@
                                 </thead>
 
                                 <t t-set="serial_counter" t-value="0"/>
-                                <t t-set="tot_discount" t-value="0"/>
+                               <!-- <t t-set="tot_discount" t-value="0"/>-->
 
                                 <t t-foreach="invoice_line_ids" t-as="line">
                                     <t t-set="serial_counter" t-value="serial_counter+1"/>
