--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -704,12 +704,12 @@
                                             <br/>
                                             <span class="lable_bold">الكمية</span>
                                         </th>
-                                       <!-- <th align="center" name="discount" class="second_table"
+                                        <th align="center" name="discount" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
-                                            <span class="lable_bold">Discount</span>
+                                            <span class="lable_bold">uom</span>
                                             <br/>
-                                            <span class="lable_bold">خصومات</span>
-                                        </th>-->
+                                            <span class="lable_bold">الوحدة</span>
+                                        </th>
                                         <th align="center" name="taxable_rate" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">VAT Rate</span>
@@ -756,6 +756,9 @@
                                         </td>
                                         <td class="second_table" style="text-align:right;">
                                             <span t-esc="'{:,}'.format(line.quantity)"/>
+                                        </td>
+                                        <td class="second_table" style="text-align:right;">
+                                            <span t-esc="'{:,}'.format(line.product_uom)"/>
                                         </td>
                                        <!-- <td class="second_table" style="text-align:right;">
                                             <span t-esc="doc.get_bt_136(line.zatca_id)"
