--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -710,7 +710,7 @@
                                             <br/>
                                             <span class="lable_bold">خصومات</span>
                                         </th>-->
-                                       
+
                                         <th align="center" name="taxable_rate" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">VAT Rate</span>
@@ -757,7 +757,7 @@
                                         </td>
                                         <td class="second_table" style="text-align:right;">
                                             <span t-esc="'{:,}'.format(line.quantity)"/>
-                                             <span t-esc="'{:,}'.format(line.product_uom_id)"/>
+                                             <span t-esc="'{:,}'.format(line.product_uom_id.name)"/>
                                         </td>
 
 
