--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -757,6 +757,7 @@
                                         </td>
                                         <td class="second_table" style="text-align:right;">
                                             <span t-esc="'{:,}'.format(line.quantity)"/>
+                                             <t t-raw="' / '"/>
                                               <span t-esc="line.product_uom_id.name"/>
                                         </td>
 
