--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -710,6 +710,12 @@
                                             <br/>
                                             <span class="lable_bold">خصومات</span>
                                         </th>-->
+                                        <th align="center" name="discount" class="second_table"
+                                            style="background-color:#4f4d4d;text-align:center;color:white;">
+                                            <span class="lable_bold">UOM</span>
+                                            <br/>
+                                            <span class="lable_bold">الوحدة</span>
+                                        </th>
 
                                         <th align="center" name="taxable_rate" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
@@ -757,7 +763,9 @@
                                         </td>
                                         <td class="second_table" style="text-align:right;">
                                             <span t-esc="'{:,}'.format(line.quantity)"/>
-                                             <t t-raw="' / '"/>
+
+                                        </td>
+                                         <td class="second_table" style="text-align:right;">
                                               <span t-esc="line.product_uom_id.name"/>
                                         </td>
 
