--- a/custom-addons/ksa_zatca_integration_pos/reports/report.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/report.xml
@@ -13,7 +13,7 @@
         <record id="view_pos_config_form_inherit" model="ir.ui.view">
             <field name="name">pos.config.form.inherit</field>
             <field name="model">pos.config</field>
-            <field name="inherit_id" ref="point_of_sale.view_pos_config_form"/>
+            <field name="inherit_id" ref="point_of_sale.pos_config_view_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//group[@name='order_management']" position="inside">
                     <field name="default_customer_id"/>
