--- a/custom-addons/ksa_zatca_integration_pos/reports/report.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/report.xml
@@ -17,7 +17,7 @@
             <field name="arch" type="xml">
                  <xpath expr="//form//sheet" position="inside">
                     <group>
-                        <field name="default_customer_id"/>
+                        <field name="printer_ids"/>
                     </group>
                 </xpath>
             </field>
