--- a/custom-addons/ksa_zatca_integration_pos/reports/report.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/report.xml
@@ -10,7 +10,18 @@
         <field name="paperformat_id" ref="ksa_zatca_integration.paperformat_standard"/>
     </record>
 
-       
+        <record id="view_pos_config_form_inherit" model="ir.ui.view">
+            <field name="name">pos.config.form.inherit</field>
+            <field name="model">pos.config</field>
+            <field name="inherit_id" ref="point_of_sale.pos_config_view_form"/>
+            <field name="arch" type="xml">
+                 <xpath expr="//form//sheet" position="inside">
+
+                        <field name="default_customer_id"/>
+
+                </xpath>
+            </field>
+        </record>
 
 
 </odoo>
