--- a/custom-addons/ksa_zatca_integration_pos/reports/report.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/report.xml
@@ -9,6 +9,18 @@
         <field name="print_report_name">object.zatca_invoice_name.replace('.xml', '')</field>
         <field name="paperformat_id" ref="ksa_zatca_integration.paperformat_standard"/>
     </record>
+    <record id="pos_config_view_form_inherited" model="ir.ui.view">
+        <field name="name">pos.config.form.inherited</field>
+        <field name="model">pos.config</field>
+        <field name="inherit_id" ref="point_of_sale.view_pos_config_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//div[@class='oe_title']" position="after">
+                <div>
+                    <field name="default_customer_id"/>
+                </div>
+            </xpath>
+        </field>
+    </record>
 
 
 </odoo>
