--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -729,12 +729,12 @@
                                             <br/>
                                             <span class="lable_bold">مبلغ ﺿﺮﻳﺒﺔ اﻟﻘﻴﻤﺔ اﻟﻤﻀﺎﻓﺔ</span>
                                         </th>
-                                        <th align="right" name="item_subtotal" class="second_table"
+                                        <!--<th align="right" name="item_subtotal" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">Subtotal Exclusive of VAT</span>
                                             <br/>
                                             <span class="lable_bold">إﺟﻤﺎﻟﻲ اﻟﻤﺒﻠﻎ ﻏﻴﺮ ﺷﺎﻣﻞ ﺿﺮﻳﺒﺔ اﻟﻘﻴﻤﺔ اﻟﻤﻀﺎﻓﺔ</span>
-                                        </th>
+                                        </th>-->
                                         <th align="right" name="item_subtotal" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">Subtotal Inclusive of VAT</span>
