--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -42,8 +42,8 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='order_line']/tree/field[@name='product_uom_qty']" position="after">
 
-                     <field name="multi_uom_price_id"/>
-                    <field name="multi_uom_id"/>
+                     <field name="product_id" position="after">
+                    <field name="uom_id"/></field>
                 </xpath>
             </field>
         </record>
