--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -43,7 +43,7 @@
                 <xpath expr="//field[@name='order_line']/tree/field[@name='product_uom_qty']" position="after">
 
                      <field name="product_id" position="after">
-                    <field name="uom_id"/></field>
+                    <field name="multi_uom_id"/></field>
                 </xpath>
             </field>
         </record>
