--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -41,9 +41,8 @@
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='order_line']/tree/field[@name='product_uom_qty']" position="after">
-
-                     <field name="product_id" position="after">
-                    <field name="multi_uom_id"/></field>
+                    
+                    <field name="multi_uom_id"/>
                 </xpath>
             </field>
         </record>
