--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -41,8 +41,14 @@
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='order_line']/tree/field[@name='product_uom_qty']" position="after">
-                    
-                    <field name="multi_uom_id"/>
+
+                   <field name="multi_uom_price_id" nolabel="1" colspan="2">
+                            <tree editable="bottom">
+                                <field name="category_id" invisible="1" column_invisible="1"/>
+                                <field name="uom_id"/>
+                                <field name="price"/>
+                            </tree>
+                        </field>       
                 </xpath>
             </field>
         </record>
