--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -42,6 +42,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='order_line']/tree/field[@name='product_uom_qty']" position="after">
   <field name="available_uoms"/>
+                    <field name="product_uom" domain="[('id', 'in', available_uoms.ids)]"/>
 
 
                 </xpath>
