--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -42,7 +42,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='order_line']/tree/field[@name='product_uom_qty']" position="after">
                       <field name="available_uoms" widget="many2many_tags"/>
-                    <field name="product_uom" domain="[('id', 'in', available_uoms.ids)]"/>
+                    <field name="product_uom" domain="[('id', 'in', order_line.available_uoms.ids)]"/>
                 </xpath>
             </field>
         </record>
