--- a/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
+++ b/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
@@ -761,11 +761,11 @@
                                             </t>
                                             %
                                         </td>
-
                                         <td class="second_table" style="text-align:right;">
-                                            <span t-esc="doc.get_bt_131(line.zatca_id)"
+                                            <span t-esc="doc.get_ksa_11(line.zatca_id)"
                                                   t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                                         </td>
+
                                         <td class="second_table" style="text-align:right;">
                                             <span t-esc="doc.get_ksa_12(line.zatca_id)"
                                                   t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
