--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -23,6 +23,7 @@
                 <field name="category_id" invisible="1"/>
                 <field name="uom_id"/>
                 <field name="price"/>
+                <field name="cost"/>
                 <field name="barcode"/>
                 <field name="product_variant_id" column_invisible="1"/>
             </tree>
